# repo

./: CMakeLists.txt
include/: app.h  database.h  utils.h
src/: app.cpp  database.cpp  main.cpp  utils.cpp
tests/: mock_database.h  test_app.cpp  test_greater_than.cpp  test_sum.cpp
